daemon: Split out updating on_battery and warning_level

So that we can reuse this code.

https://bugs.freedesktop.org/show_bug.cgi?id=86144